miniscule change to redo webhook

--- a/caliber/src/main/webapp/static/pages/index.html
+++ b/caliber/src/main/webapp/static/pages/index.html
@@ -22,7 +22,7 @@
   https://github.com/pjw6193/caliber        
    Special thanks to all the batches
   that put in countless hours of hard
- core coding to make Caliber great again                              			                                           
+ core coding to make Caliber great again.                              			                                           
 -->
 <!-- JQuery -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"
