added trainer name to datalist for searching to allow FireFox/Edge users to see trainee names in dropdown

--- a/caliber/src/main/webapp/static/pages/index.html
+++ b/caliber/src/main/webapp/static/pages/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <!-- 
  _____                 _                  
 |  __ \               | |                 
@@ -28,7 +29,7 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"
 	integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 	crossorigin="anonymous"></script>
-
+ 
 <!-- Chart.js -->
 <!-- This is a dependency for creating charts in angular -->
 <script type="text/javascript"
