Batch overall panel report works and is in the correct spot. Still need to implement glyphicons

--- a/caliber/src/main/webapp/static/pages/index.html
+++ b/caliber/src/main/webapp/static/pages/index.html
@@ -155,7 +155,8 @@
 		src="/static/app/resources/js/factories/vpFactory.js"></script>
 	<script type="text/javascript"
 		src="/static/app/resources/js/factories/aggFactory.js"></script>
-
+	<script type="text/javascript"
+		src="/static/app/resources/js/factories/panelFactory.js"></script>
 	<script type="text/javascript"
 		src="/static/app/resources/js/factories/allFactory.js"></script>
 	<script type="text/javascript"
