--- a/caliber/src/main/java/com/revature/caliber/email/emailTemplate.html
+++ b/caliber/src/main/java/com/revature/caliber/email/emailTemplate.html
@@ -2,6 +2,8 @@
 <h2>Dear $TRAINER_NAME,</h2><br/> 
 
 <h3>This is an automated message informing you that there are grades missing your trainees in Caliber.</h3></br>
-<h3>Please log on to Caliber and input grades ASAP. This information is critical to providing a healthy picture of Revature.</h3></br>
-<h3>You can check your grades <ui-sref = "trainee.assess">here</ui-sref></h3>
+<h3>Please log on to Caliber and input grades ASAP.</h3></br>
+<h3>You can check your grades <a href = "https://caliber.revature.tech/">here</a></h3></br>
+<h4>Thank you,</h4>
+<h4>Caliber</h4>
 
