PanelHomeController added with Pass vs Fail last 14 day panel chart added

--- a/caliber/src/main/webapp/static/pages/index.html
+++ b/caliber/src/main/webapp/static/pages/index.html
@@ -189,6 +189,8 @@
 	<script type="text/javascript"
 		src="/static/app/resources/js/controllers/trainerHomeController.js"></script>
 	<script type="text/javascript"
+		src="/static/app/resources/js/controllers/panelHomeController.js"></script>
+	<script type="text/javascript"
 		src="/static/app/resources/js/controllers/testAPIController.js"></script>
 	<script type="text/javascript"
 		src="/static/app/resources/js/controllers/panelModalController.js"></script>
