--- a/caliber/src/main/resources/emailTemplate.html
+++ b/caliber/src/main/resources/emailTemplate.html
@@ -1,3 +1,9 @@
+<style>
+@font-face {
+	font-family: 'Futura-Std-Book';
+	src: url('fonts/Futura-Std-Book.otf') format('opentype');
+}
+</style>
 <h2>Dear $TRAINER_NAME,</h2>
 <p>This is an automated message informing you that you have yet to submit grades for one of your batches. Please log on to Caliber and input grades ASAP.</p>
 <p>You can check your grades <a href = "https://caliber.revature.tech/">here</a></p>
