QC/Staging batches limited on Manage Batch

--- a/caliber/src/main/webapp/static/pages/index.html
+++ b/caliber/src/main/webapp/static/pages/index.html
@@ -187,6 +187,7 @@
 	<script type="text/javascript"
 		src="/static/app/resources/js/controllers/qcAssessController.js"></script>
 	<script type="text/javascript"
+		src="/static/app/resources/js/controllers/qcManageController.js"></script>	<script type="text/javascript"
 		src="/static/app/resources/js/controllers/trainerHomeController.js"></script>
 	<script type="text/javascript"
 		src="/static/app/resources/js/controllers/panelHomeController.js"></script>
