salesforce v2 has released

--- a/caliber/src/main/webapp/static/pages/login.html
+++ b/caliber/src/main/webapp/static/pages/login.html
@@ -297,7 +297,7 @@ html {
 		</div>
 	</div>
 	<div id="right">
-		<iframe frameborder="0" src="/s.gif" id="marketing" name="marketing"
+		<iframe frameborder="0" id="marketing" name="marketing"
 			scrolling="no" title="Marketing" tabindex="-1"
 			sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts"></iframe>
 	</div>
